if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
  set(CSP_POSIX 1)
  add_subdirectory(posix)
elseif(CMAKE_SYSTEM_NAME STREQUAL "Generic")
  if(CSP_SYSTEM_NAME STREQUAL "freertos")
    set(CSP_FREERTOS 1)
    add_subdirectory(freertos)
  else()
    message(FATAL_ERROR "Not supported ${CSP_SYSTEM_NAME}")
  endif()
elseif(CMAKE_SYSTEM_NAME STREQUAL "Zephyr")
  set(CSP_ZEPHYR 1)
  add_subdirectory(zephyr)
else()
  message(FATAL_ERROR "invalid system ${CMAKE_SYSTEM_NAME}")
endif()
